--- a/Baekjoon/.vscode/settings.json
+++ b/Baekjoon/.vscode/settings.json
@@ -2,7 +2,8 @@
   "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
     "iostream": "cpp",
-    "ios": "cpp"
+    "ios": "cpp",
+    "queue": "cpp"
   },
 }
 
