--- a/Baekjoon/.vscode/settings.json
+++ b/Baekjoon/.vscode/settings.json
@@ -3,7 +3,8 @@
   "files.associations": {
     "iostream": "cpp",
     "ios": "cpp",
-    "queue": "cpp"
+    "queue": "cpp",
+    "vector": "cpp"
   },
 }
 
