--- a/Baekjoon/.vscode/settings.json
+++ b/Baekjoon/.vscode/settings.json
@@ -4,7 +4,14 @@
     "iostream": "cpp",
     "ios": "cpp",
     "queue": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "__split_buffer": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "forward_list": "cpp",
+    "list": "cpp",
+    "string": "cpp",
+    "string_view": "cpp"
   },
 }
 
