--- a/Baekjoon/.vscode/settings.json
+++ b/Baekjoon/.vscode/settings.json
@@ -1,40 +1,41 @@
 {
-  "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
-    "iostream": "cpp",
-    "ios": "cpp",
-    "queue": "cpp",
     "vector": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
     "__split_buffer": "cpp",
     "array": "cpp",
+    "atomic": "cpp",
+    "bitset": "cpp",
+    "cstddef": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
     "deque": "cpp",
-    "forward_list": "cpp",
-    "list": "cpp",
+    "memory": "cpp",
+    "format": "cpp",
+    "initializer_list": "cpp",
+    "ios": "cpp",
+    "istream": "cpp",
+    "iterator": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "new": "cpp",
+    "optional": "cpp",
+    "ostream": "cpp",
+    "print": "cpp",
+    "random": "cpp",
     "string": "cpp",
-    "string_view": "cpp"
-  },
+    "string_view": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "typeinfo": "cpp",
+    "unordered_map": "cpp",
+    "utility": "cpp",
+    "variant": "cpp",
+    "map": "cpp"
+  }
 }
-
-// "workbench.colorCustomizations": {
-//     "terminal.background":"#1D2021",
-//     "terminal.foreground":"#A89984",
-//     "terminalCursor.background":"#A89984",
-//     "terminalCursor.foreground":"#A89984",
-//     "terminal.ansiBlack":"#1D2021",
-//     "terminal.ansiBlue":"#0D6678",
-//     "terminal.ansiBrightBlack":"#665C54",
-//     "terminal.ansiBrightBlue":"#0D6678",
-//     "terminal.ansiBrightCyan":"#8BA59B",
-//     "terminal.ansiBrightGreen":"#95C085",
-//     "terminal.ansiBrightMagenta":"#8F4673",
-//     "terminal.ansiBrightRed":"#FB543F",
-//     "terminal.ansiBrightWhite":"#FDF4C1",
-//     "terminal.ansiBrightYellow":"#FAC03B",
-//     "terminal.ansiCyan":"#8BA59B",
-//     "terminal.ansiGreen":"#95C085",
-//     "terminal.ansiMagenta":"#8F4673",
-//     "terminal.ansiRed":"#FB543F",
-//     "terminal.ansiWhite":"#A89984",
-//     "terminal.ansiYellow":"#FAC03B"
-//   }
-// }
